# DPLL_solver

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: main.yml
docs/: maarittelydokumentti.md  testidokumentti.md  toteutusdokumentti.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: CMakeLists.txt  data_types.h  dpll.cpp  dpll.h  dpll_io.cpp  dpll_io.h  main.cpp  parser.cpp  parser.h  solver.cpp  solver.h
test/: CMakeLists.txt  test_dpll.cpp  test_e2e.cpp  test_helper.h  test_performance.cpp
